--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,11 +1,9 @@
-name: Release and Publish to npm
+name: Release and Publish
 
 on:
   push:
     branches:
       - main
-    tags:
-      - 'v*'
 
 jobs:
   release:
@@ -24,10 +22,11 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Publish using Changesets
+      - name: Run changeset publish
         run: npm run changeset:release
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
