--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
   "name": "pmpx",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Smart package manager proxy CLI",
   "bin": {
     "pmpx": "./bin/index.js"
   },
   "scripts": {
-    "changeset:gen": "npx changeset",
+    "version": "changeset version",
+    "postversion": "git add . && git commit -m 'chore(release): version bump' && git push",
     "changeset:release": "changeset publish",
-    "release:minor": "changeset version --type=minor && npm version && git add . && git commit -m 'chore(release): version bump' && git push --follow-tags",
-    "release:major": "changeset version --type=major && npm version && git add . && git commit -m 'chore(release): version bump' && git push --follow-tags",
-    "release:patch": "changeset version --type=patch && npm version && git add . && git commit -m 'chore(release): version bump' && git push --follow-tags"
+    "changeset:gen": "npx changeset"
   },
   "keywords": [
     "cli",
