--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
   "bugs": {
     "url": "https://github.com/Bobbyjsx/pmpx/issues"
   },
-  "homepage": "https://github.com/Bobbyjsx/pmpx#readme"
+  "homepage": "https://github.com/Bobbyjsx/pmpx#readme",
+  "dependencies": {
+    "chalk-animation": "^2.0.3"
+  }
 }
