--- a/package.json
+++ b/package.json
@@ -17,14 +17,7 @@
       "lint": "biome check .",
       "format": "biome format . --write"
    },
-   "keywords": [
-      "cli",
-      "npm",
-      "yarn",
-      "pnpm",
-      "proxy",
-      "developer-tools"
-   ],
+   "keywords": ["cli", "npm", "yarn", "pnpm", "proxy", "developer-tools"],
    "author": "Godswill Ezeala",
    "license": "MIT",
    "devDependencies": {
