--- a/package.json
+++ b/package.json
@@ -46,5 +46,9 @@
    "homepage": "https://github.com/Bobbyjsx/pmpx#readme",
    "dependencies": {
       "chalk-animation": "^2.0.3"
-   }
+   },
+   "files": [
+      "dist",
+      "bin"
+   ]
 }
