--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
    "name": "pmpx",
-   "version": "2.0.2",
+   "version": "2.0.3",
    "description": "Smart package manager proxy CLI",
    "bin": {
       "pmpx": "bin/index.js"
@@ -17,14 +17,7 @@
       "lint": "biome check .",
       "format": "biome format . --write"
    },
-   "keywords": [
-      "cli",
-      "npm",
-      "yarn",
-      "pnpm",
-      "proxy",
-      "developer-tools"
-   ],
+   "keywords": ["cli", "npm", "yarn", "pnpm", "proxy", "developer-tools"],
    "author": "Godswill Ezeala",
    "license": "MIT",
    "devDependencies": {
@@ -47,8 +40,5 @@
    "dependencies": {
       "chalk-animation": "^2.0.3"
    },
-   "files": [
-      "dist",
-      "bin"
-   ]
+   "files": ["dist", "bin"]
 }
