Build: Create tag ci action

--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -23,7 +23,7 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
-      - name: Bump version and push tag
+      - name: Bump version and push
         # run: npm run version
         run: |
           echo "Checking for pending changesets..."
@@ -36,3 +36,11 @@ jobs:
 
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      
+      - name: Create and push version tag
+        if: success()
+        run: |
+          VERSION=$(node -p "require('./package.json').version")
+          git tag "v$VERSION"
+          git push origin "v$VERSION"
+
